--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "devDependencies": {
     "@babel/core": "^7.4.5",
     "@babel/preset-env": "^7.4.5",
-    "jest": "^24.8.0"
+    "jest": "^24.8.0",
+    "lodash": "^4.17.19"
   },
   "dependencies": {
     "axios": "^0.19.0"
